# pipecat-subagents

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  UI_AGENT_DESIGN.md  pyproject.toml
.claude/skills/update-docs/: SKILL.md  SOURCE_DOC_MAPPING.md
.github/workflows/: build.yaml  coverage.yaml  python-compatibility.yaml
changelog/: 12.changed.md  12.fixed.md  14.other.md  16.changed.md  18.added.md  18.changed.md  19.changed.md  20.added.md  21.added.md  6.added.md  8.changed.md  9.fixed.md
clowder-ui/: index.html  package-lock.json  package.json
clowder-ui/src/: App.tsx  colors.ts  index.css  store.ts  types.ts
clowder-ui/src/components/: AgentTree.tsx  DetailPanel.tsx  EventStream.tsx  TopBar.tsx
clowder-ui/src/hooks/: useClowderSocket.ts
examples/: README.md  env.example  llm_and_flows_agent.py  single_agent.py  two_llm_agents.py  two_llm_agents_with_tts.py
examples/agent-handoff/: llm_and_flows_agent.py  single_agent.py  two_llm_agents.py  two_llm_agents_with_tts.py
examples/distributed/pgmq-handoff/: env.example  llm_agent.py  main_agent.py
examples/distributed/redis-handoff/: README.md  llm_agent.py  main_agent.py
examples/distributed/remote-proxy-assistant/: README.md  assistant_agent.py  main_agent.py
examples/local/agent-handoff/: README.md  llm_and_flows_agent.py  single_agent.py  two_llm_agents.py  two_llm_agents_with_tts.py
examples/local/code-assistant/: README.md  code_assistant.py  code_worker.py  voice_agent.py
examples/local/parallel-debate/: README.md  parallel_debate.py
examples/local/ui-agent/: README.md
examples/local/ui-agent/async-tasks/: README.md  bot.py
examples/local/ui-agent/async-tasks/client/: main.js  package-lock.json  package.json
examples/local/ui-agent/deixis/: README.md  bot.py
examples/local/ui-agent/deixis/client/: main.js  package-lock.json  package.json
examples/local/ui-agent/document-review/: README.md  bot.py
examples/local/ui-agent/document-review/client/: main.js  package-lock.json  package.json
examples/local/ui-agent/form-fill/: README.md  bot.py
examples/local/ui-agent/form-fill/client/: index.html  main.js  package-lock.json  package.json  styles.css
examples/local/ui-agent/hello-snapshot/: README.md  bot.py
examples/local/ui-agent/hello-snapshot/client/: main.js  package-lock.json  package.json
examples/local/ui-agent/pointing/: README.md  bot.py
examples/local/ui-agent/pointing/client/: index.html  main.js  package-lock.json  package.json  styles.css
src/pipecat_agents/agents/: __init__.py  agent_context_processor.py  base_agent.py  flows_agent.py  flows_context_agent.py  llm_agent.py  llm_context_agent.py  tool.py
src/pipecat_agents/bus/: __init__.py  bridge_processor.py  bus.py  frames.py  input_processor.py  local_bus.py  messages.py  output_processor.py
src/pipecat_agents/runner/: __init__.py  runner.py  user_agent.py
src/pipecat_subagents/: types.py
src/pipecat_subagents/agents/: __init__.py  base_agent.py  detached_agent.py  flows_agent.py  flows_detached_agent.py  llm_agent.py  llm_detached_agent.py  task_context.py  task_decorator.py  task_group.py  ui_agent.py  ui_bridge.py  ui_commands.py  ui_prompts.py  ui_task_context.py  ui_tools.py  watch_decorator.py
src/pipecat_subagents/agents/flows/: __init__.py  agent.py
src/pipecat_subagents/agents/llm/: __init__.py  agent.py  llm_context_agent.py  tool_decorator.py
src/pipecat_subagents/agents/proxy/websocket/: client.py  server.py
src/pipecat_subagents/agents/ui/: __init__.py  ui_agent.py  ui_bridge.py  ui_commands.py  ui_event_decorator.py  ui_messages.py  ui_prompts.py  ui_task_context.py  ui_tools.py
src/pipecat_subagents/bus/: __init__.py  bridge_processor.py  bus.py  local_bus.py  messages.py  subscriber.py
src/pipecat_subagents/bus/adapters/: __init__.py  base.py  frame_adapter.py  frame_adapters.py  llm_context_adapter.py  tools_schema_adapter.py
src/pipecat_subagents/bus/local/: async_queue.py
src/pipecat_subagents/bus/network/: __init__.py  pgmq.py  redis.py
src/pipecat_subagents/bus/serializers/: __init__.py  base.py  json.py
src/pipecat_subagents/clowder/: agent.py
src/pipecat_subagents/registry/: registry.py
src/pipecat_subagents/runner/: __init__.py  runner.py
tests/: test_agent_context_processor.py  test_base_agent.py  test_bridge_processor.py  test_bus.py  test_frame_adapters.py  test_input_processor.py  test_llm_agent.py  test_messages.py  test_output_processor.py  test_pgmq_bus.py  test_redis_bus.py  test_runner.py  test_serializers.py  test_task_group.py  test_ui_agent.py  test_ui_bridge.py  test_ui_commands.py  test_ui_task_lifecycle.py  test_ui_tools.py  test_websocket_proxy.py
