[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pipecat-ai-subagents"
dynamic = ["version"]
description = "Distributed Subagents Framework for Pipecat"
license = { text = "BSD 2-Clause License" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["pipecat", "agents", "subagents", "distributed", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [ "pipecat-ai>=1.0.0" ]

[project.optional-dependencies]
flows = ["pipecat-ai-flows>=1.0.0"]
redis = ["redis[hiredis]>=5.0.0"]
websocket = [ "websockets>=13.1,<16.0", "fastapi>=0.115.6,<1" ]
examples = [
    "claude-agent-sdk>=0.1.0",
    "pipecat-ai-subagents[flows,redis,websocket]",
    "pipecat-ai[webrtc,daily,silero,deepgram,cartesia,openai,runner]>=1.0.0"
]

[project.urls]
Source = "https://github.com/pipecat-ai/pipecat-subagents"
Website = "https://www.pipecat.ai"

[dependency-groups]
dev = [
    "build~=1.2.2",
    "pip-tools~=7.4.1",
    "pre-commit~=4.2.0",
    "pyright~=1.1.402",
    "pytest>=9.0.0,<10",
    "pytest-asyncio>=1.0.0,<2",
    "pytest-aiohttp>=1.0.0,<2",
    "pytest-cov~=4.1.0",
    "ruff~=0.12.1",
    "setuptools~=78.1.1",
    "setuptools_scm~=8.3.1",
    "towncrier~=25.8.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
exclude = [".git"]
line-length = 100

[tool.ruff.lint]
select = [
    "D", # Docstring rules
    "I", # Import rules
]
ignore = [
    "D105",  # Missing docstring in magic methods (__str__, __repr__, etc.)
]

[tool.ruff.lint.per-file-ignores]
# Skip docstring checks for non-source code
"examples/**/*.py" = ["D"]
"tests/**/*.py" = ["D"]
# Skip D104 (missing docstring in public package) for __init__.py files
"**/__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
command_line = "--module pytest"
source = ["src"]
omit = ["*/tests/*"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
fallback_version = "0.0.0-dev"

[tool.towncrier]
package = "pipecat_subagents"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changelog"
start_string = "<!-- towncrier release notes start -->\n"
template = "changelog/_template.md.j2"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/pipecat-ai/pipecat-subagents/pull/{issue})"
underlines = ["", "", ""]
wrap = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "performance"
name = "Performance"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "other"
name = "Other"
showcontent = true
